--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       height: auto;
     }
     li{
-        margin-top: 20px;
+        margin: 20px 7px 7px 7px;
     }
     h1,
     h2,
@@ -180,6 +180,15 @@
             </div>
           </div>
         </li>
+        <li>
+            <div class="card">
+              <img class="imgg" src="i5.jpg" alt="">
+              <div class="card-content">
+                <h3 class="card-title">Andaman – The Beach Haven</h3>
+                <p>Andaman is blessed with the best of nature in the form of virgin beaches bordering the turquoise sea. These islands are the proof of God's vivid imagination. Islands of Andaman & Nicobar are located in the east of the Indian mainland geographically.</p>
+              </div>
+            </div>
+          </li>
       </ul>
     </section>
     <section id="section-c" class="grid">
